* merge from trunk rev. 2470, 2473, 2474 * TODO: merge cmake-files from trunk, shaplov? * compile++

--- a/branches/branch-playground/TODO
+++ b/branches/branch-playground/TODO
@@ -2,6 +2,6 @@ $Id$
 
 TODO list for sim-im 1.0.0:
 
-1) profiles (icesik@)
-2) port to Qt4 (darkstar@)
-3) fix all bugs ;-)
+1) fix all bugs ;-)
+2) implement nice things
+3) make all a little bit nicer
