* Todo for us, update

--- a/branches/branch-playground/TODO
+++ b/branches/branch-playground/TODO
@@ -17,6 +17,8 @@ $Id$
 
 - Sound-plugin:
 	* no startup sound is played
+	
+- Config-Dialog steals access to other windows (f.e. InterfaceWindow, MainWindow...)
 
 
 
